compiler/test/snapshot/infer-expr/error-when-spreading-in-different-structs.exp
Error when spreading in different structs.

SOURCE:
{
  struct Foo { a: int, b: string }
  struct Bar { a: int, b: string }

  let x = Foo { a: 1, b: "foo" }
  let y = Bar { a: 1, b: "bar" }
  Foo { b: "bar", ..y }
}

OUTPUT:
Type mismatch
Expected:
    Foo
Got:
    Bar

7|    Foo { b: "bar", ..y }
                        ^